<resources>
    <string name="app_name">My Application</string>
    <string name="button">Przycisk</string>
    <string name="button3">Dalej</string>
    <string name="button4">Wstecz</string>
    <string name="radiobutton7">RadioButton</string>
    <string name="radiobutton9">RadioButton</string>
    <string name="button5">Button</string>
    <string name="button2">Button</string>
    <string name="button9">Button</string>
    <string name="name4">Name</string>
    <string name="name3">Name</string>
    <string name="name2">Name</string>
    <string name="textview">TextView</string>
    <string name="button1">Button</string>
    <string name="name">Name</string>
    <string name="textview3">TextView</string>
    <string name="textview2">TextView</string>
    <string name="tekst">Wpisz swoje imię:</string>
    <string name="tekst2">Wpisz swój wiek:</string>
    <string name="otworz">Otwórz</string>
    <string name="miasto_wpisz">Wpisz swoje miasto:</string>
    <string name="gotowe">Gotowe</string>
    <string name="tekst_przejdzdalej">Przejdź dalej:</string>
    <string name="dalej">DALEJ</string>
    <string name="cofnij">Cofnij</string>
</resources>