<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Theme.AppCompat.Light.DarkActionBar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|center_horizontal|fill"
    android:orientation="vertical"
    tools:context=".DrugaAktywnosc">

    <TextView
        android:id="@+id/tekst"
        android:layout_width="match_parent"
        android:layout_height="330dp"
        android:gravity="center"
        android:text="@string/tekst_przejdzdalej"
        android:textColor="#9C27B0"
        android:textSize="30sp"
        tools:text="Przejdź dalej:" />

    <Button
        android:id="@+id/button"
        style="@style/Mojstyl"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:onClick="onClick2"
        android:text="@string/dalej"
        android:textSize="24sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="31dp" />

    <Button
        android:id="@+id/button5"
        style="@style/Mojstyl"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:onClick="onClick3"
        android:text="@string/cofnij"
        android:textSize="24sp" />
</LinearLayout>