<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|center_horizontal"
    android:orientation="vertical"
    tools:context=".TrzeciaAktywnosc">


    <TextView
        android:id="@+id/tekst"
        android:layout_width="234dp"
        android:layout_height="46dp"
        android:gravity="center_horizontal"
        android:shadowColor="#852F2F"
        android:text="@string/tekst"
        android:textColor="#602F0A" />

    <EditText
        android:id="@+id/imie"
        android:layout_width="288dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center_horizontal"
        android:inputType="textPersonName"
        android:text="" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="59dp" />

    <TextView
        android:id="@+id/tekst2"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:gravity="center_horizontal"
        android:shadowColor="#852F2F"
        android:text="@string/tekst2"
        android:textColor="#602F0A" />

    <EditText
        android:id="@+id/wiek"
        android:layout_width="285dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center_horizontal"
        android:inputType="textPersonName"
        android:text="" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="90dp" />

    <Button
        android:id="@+id/button9"
        android:layout_width="263dp"
        android:layout_height="81dp"
        android:background="@drawable/stan_przycisku"
        android:onClick="onClick"
        android:text="@string/gotowe" />

</LinearLayout>