<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#CAC1A6"
    android:backgroundTint="#FFFFFF"
    android:onClick="onClickButtonMisto"
    android:orientation="horizontal"
    tools:context=".MainActivity">


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Space
            android:layout_width="271dp"
            android:layout_height="44dp" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:id="@+id/textView3"
            style="@style/TextAppearance.AppCompat.Large"
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:gravity="center"
            android:shadowColor="#FFFFFF"
            android:text="@string/miasto_wpisz"
            android:textColor="#2D2F31" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <EditText
            android:id="@+id/miasto"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:ems="10"
            android:inputType="textPersonName"
            android:autofillHints="" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="33dp">

        <Space
            android:layout_width="271dp"
            android:layout_height="44dp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <Button
            android:id="@+id/button2"
            style="@style/Duzy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickButtonMisto"
            android:text="@string/otworz" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <Space
            android:layout_width="271dp"
            android:layout_height="66dp" />
    </TableRow>

    <TableRow
        android:layout_width="248dp"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button3"
            style="@style/Mojstyl"
            android:layout_width="261dp"
            android:layout_height="59dp"
            android:layout_weight="1"
            android:background="@drawable/kolorowy_przycisk"
            android:onClick="onClick"
            android:text="@string/button3" />

    </TableRow>

</TableLayout>

